k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - quak.scalebase.io
      secretName: quak-tls
  rules:
    - host: quak.scalebase.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quak
                port:
                  name: http
